--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,13 +10,11 @@
     android:padding="15dp"
     tools:context=".LoginActivity">
 
-    <!-- Start Of Scroll View Child -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Sign In Heading -->
 
         <ImageView
             android:id="@+id/imageView1"
@@ -27,25 +25,25 @@
             app:srcCompat="@drawable/splashfor" />
 
         <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="10dp"
-                android:textAlignment="center"
-                android:textSize="40sp"
-                android:textColor="#FFFFFF"
-                android:text="Вход"
-                android:textFontWeight="700"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:textAlignment="center"
+            android:textSize="40sp"
+            android:textColor="#FFFFFF"
+            android:text="Вход"
+            android:textFontWeight="700"/>
 
-        <!-- User Sing In Fields -->
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/NoUnderlineTextInputLayout"
             android:id="@+id/txt_email_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:endIconMode="clear_text"
             app:boxCollapsedPaddingTop="8dp"
             app:errorEnabled="true"
-            app:errorTextAppearance="@color/error_color"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:elevation="0dp"
+            app:boxStrokeWidth="0dp"
             android:layout_marginTop="100dp"
             >
 
@@ -58,12 +56,13 @@
                 android:hint="Email"
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/NoUnderlineTextInputLayout"
             android:id="@+id/txt_password_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:endIconMode="password_toggle"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_marginTop="20dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -75,7 +74,6 @@
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- End Of User Sing In Fields -->
 
 
 
@@ -109,10 +107,9 @@
                 android:text="Регистрация"/>
 
         </LinearLayout>
-        <!-- End Of Go To Register Text -->
 
     </LinearLayout>
-    <!-- End Of Start Of Scroll View Child -->
+
 
 
 </ScrollView>
