--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,13 +3,13 @@
     <item
         android:id="@+id/home"
         android:icon="@drawable/baseline_home_24"
-        android:title="Home" />
+        android:title="Главная" />
     <item
         android:id="@+id/search"
         android:icon="@drawable/baseline_search_24"
-        android:title="Search" />
+        android:title="Поиск" />
     <item
         android:id="@+id/profile"
         android:icon="@drawable/baseline_person_24"
-        android:title="Profile" />
+        android:title="Профиль" />
 </menu>
