--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -118,6 +118,7 @@
 
                 <RadioGroup
                     android:layout_width="wrap_content"
+                    android:layout_marginTop="-15dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
