--- a/app/src/main/res/layout/activity_success.xml
+++ b/app/src/main/res/layout/activity_success.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#1f1f1f"
+    android:background="#1B1919"
     android:gravity="center"
     android:padding="15dp"
     tools:context=".SuccessActivity">
