--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,7 +20,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Влад Малышев"
+        android:text="Влад"
         android:textColor="@color/white"
         android:textSize="30sp" />
 
@@ -43,7 +43,7 @@
         android:layout_width="360dp"
         android:layout_height="90dp"
         android:layout_below="@+id/change_profile_button"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/rounded_rectangle">
 
