--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -13,7 +13,7 @@
         android:hint="Поиск курсов"
 
         android:inputType="text"
-        android:textColor="@color/white"
+        android:textColor="#c1c1c1"
 
 
         android:paddingLeft="14dp"
