--- a/app/src/main/res/layout/activity_create_test.xml
+++ b/app/src/main/res/layout/activity_create_test.xml
@@ -8,7 +8,7 @@
     android:background="#1f1f1f"
     android:padding="15dp"
 
-    tools:context=".CreateCourseActivity">
+    tools:context=".CreateTestActivity">
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -18,7 +18,7 @@
         android:layout_marginBottom="10dp">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/create_note_title_field"
+            android:id="@+id/create_test_title_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="25dp"
@@ -35,7 +35,7 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/create_note_body_field"
+            android:id="@+id/create_test_body_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="25dp"
@@ -46,11 +46,12 @@
     <!-- End Of Body Text Field -->
 
     <Button
-        android:id="@+id/create_note_btn"
+        android:id="@+id/create_test_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cоздать курс"
+        android:text="Создать тест"
         android:textAllCaps="false"
+
         android:backgroundTint="#1e90ff"
         android:paddingVertical="18dp"/>
 
