--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
+    android:background="#1f1f1f"
+
     tools:context=".ProfileActivity">
+
+
 
 
     <TextView
@@ -14,18 +18,22 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="7dp"
         android:textSize="25sp"
-        android:text="Your Details"/>
+        android:fontFamily="@font/globersemiboldfree"
+        android:textColor="@color/white"
+        android:text="Персональные данные"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txt_prof_first_name_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:layout_marginTop="10dp">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_prof_first_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="First Name"/>
+            android:background="@drawable/rounded_edittext_background"
+            android:hint="Имя"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -37,7 +45,8 @@
             android:id="@+id/txt_prof_last_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Last Name"/>
+            android:background="@drawable/rounded_edittext_background"
+            android:hint="Фамилия"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -49,6 +58,7 @@
             android:id="@+id/txt_prof_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rounded_edittext_background"
             android:hint="Email"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -57,8 +67,12 @@
         android:id="@+id/profile_logout_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Logout"
-        android:layout_marginTop="10dp"
+        android:text="Выйти"
+        android:fontFamily="@font/globersemiboldfree"
+        android:textAllCaps="false"
+        android:textSize="16sp"
+        android:backgroundTint="#1e90ff"
+       android:layout_marginTop="500dp"
         android:paddingVertical="18dp"/>
 
 </LinearLayout>
