--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="15dp"
+    android:fontFamily="@font/globersemiboldfree"
     android:gravity="center"
     android:background="#1a1a1a"
     tools:context=".RegisterActivity">
@@ -37,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:text="Регистрация"
+                android:fontFamily="@font/globersemiboldfree"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textFontWeight="700"
@@ -199,6 +201,7 @@
                 android:backgroundTint="#1e90ff"
                 android:layout_marginTop="20dp"
                 android:enabled="false"
+                android:textAllCaps="false"
                 android:text="Создать аккаунт"
                 android:textColor="#FFFFFF"/>
             <!-- End Of Register Action Button  -->
@@ -208,15 +211,18 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
+                android:fontFamily="@font/globersemiboldfree"
                 android:layout_height="wrap_content">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
+                    android:fontFamily="@font/globersemiboldfree"
                     android:text="Уже есть аккаунт?"/>
                 <TextView
                     android:id="@+id/txt_go_to_sign_in"
+                    android:fontFamily="@font/globersemiboldfree"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
