--- a/app/src/main/res/layout/activity_test_detail.xml
+++ b/app/src/main/res/layout/activity_test_detail.xml
@@ -1,24 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#1f1f1f"
-    android:orientation="vertical"
+    android:layout_height="match_parent" android:background="#1f1f1f" android:orientation="vertical"
 
+    android:padding="15dp" tools:context=".TestDetailActivity">
 
-    tools:context=".CourseDetailActivity">
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/create_test_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="40dp"
-        android:clickable="true"
-        app:srcCompat="@drawable/baseline_add_24" />
     <!-- Note Detail Wrapper -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,47 +18,34 @@
 
 
         <TextView
-            android:id="@+id/note_dtl_title"
+            android:id="@+id/test_dtl_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            android:paddingLeft="20dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="43sp"
             android:layout_marginBottom="10dp"/>
 
         <TextView
-            android:id="@+id/note_dtl_body"
+            android:id="@+id/test_dtl_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="23sp"
             android:text=""
-            android:paddingLeft="20dp"
             android:textColor="@color/white"
             android:layout_marginBottom="10dp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-
-            android:id="@+id/test_list_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:visibility="gone"/>
     </LinearLayout>
-
-
     <!-- End Of Note Detail Wrapper -->
 
-
     <TextView
-        android:id="@+id/delete_course_btn"
+        android:id="@+id/delete_test_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"
-        android:text="Удалить курс"
+        android:layout_marginBottom="16dp"
+        android:text="Удалить тест"
 
         android:textSize="18sp"
         android:textColor="#C34040" />
