--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,52 +1,55 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#1f1f1f"
+    android:background="#1a1a1a"
     tools:context=".HomeFragment">
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/create_courses_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="34dp"
-        android:layout_marginBottom="20dp"
+
+android:layout_marginTop="720dp"
+        android:layout_marginLeft="350dp"
+
         android:clickable="true"
         app:srcCompat="@drawable/baseline_add_24" />
-    <!--    <TextView-->
-    <!--        android:id="@+id/display_username"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:textColor="@color/white"-->
-    <!--        android:text=""-->
 
-    <!--        android:layout_marginLeft="130dp"-->
-    <!--        android:elevation="20dp"-->
-    <!--        android:paddingHorizontal="15dp"-->
-    <!--        android:paddingVertical="20dp"-->
-    <!--        android:textSize="36sp"/>-->
-    <!-- TextView "Рекомендации" -->
-    <!--    <TextView-->
-    <!--        android:id="@+id/hello"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:textColor="@color/white"-->
-    <!--        android:text="Привет, "-->
-    <!--        android:elevation="20dp"-->
-
-    <!--        android:paddingHorizontal="5dp"-->
-    <!--        android:paddingVertical="20dp"-->
-    <!--        android:layout_marginBottom="10dp"-->
-
-    <!--        android:textSize="36sp"/>-->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/note_list_recycler_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingVertical="10dp"
+        android:gravity=""
+        android:paddingHorizontal="10dp"
+        android:background="@drawable/course_list__bg_style"
 
-        android:visibility="gone"/>
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/test_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Все курсы"
+            android:layout_marginLeft="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="43sp"
+            android:fontFamily="@font/globersemiboldfree"
+            android:layout_marginBottom="5dp"/>
+
+
+
+        <androidx.recyclerview.widget.RecyclerView
+
+            android:id="@+id/note_list_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:visibility="gone"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/no_notes"
