--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,6 +15,7 @@
         android:id="@+id/change_av_button"
         android:layout_width="200dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/globersemiboldfree"
         android:layout_below="@id/change_profile_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
@@ -32,6 +33,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:text=""
+        android:fontFamily="@font/globersemiboldfree"
         android:textColor="@color/white"
         android:textSize="30sp" />
 
@@ -54,10 +56,12 @@
         android:id="@+id/change_profile_button"
         android:layout_width="200dp"
         android:layout_height="60dp"
+
         android:layout_below="@id/user_name"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
         android:backgroundTint="#1e90ff"
+        android:fontFamily="@font/globersemiboldfree"
         android:text="Изменить профиль"
         android:textAllCaps="false"
         android:textSize="14sp" />
@@ -69,7 +73,7 @@
         android:layout_width="360dp"
         android:layout_height="90dp"
         android:layout_below="@+id/change_profile_button"
-        android:layout_marginLeft="15dp"
+        android:layout_centerInParent="true"
         android:layout_marginTop="100dp"
         android:background="@drawable/rounded_rectangle">
 
@@ -79,6 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:paddingStart="20dp"
+            android:fontFamily="@font/globersemiboldfree"
             android:text="Включить уведомления"
             android:textColor="@color/white"
             android:textSize="16sp" />
@@ -98,8 +103,9 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
+        android:fontFamily="@font/globersemiboldfree"
         android:text="Выйти"
         android:textSize="18sp"
-        android:textColor="#4f4f4f" />
+        android:textColor="#C34040" />
 
 </RelativeLayout>
