--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -21,6 +21,7 @@
         app:srcCompat="@drawable/baseline_add_24" />
     <!-- Note Detail Wrapper -->
     <LinearLayout
+        android:id="@+id/to_test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="20dp"
