--- a/app/src/main/res/layout/activity_create_test.xml
+++ b/app/src/main/res/layout/activity_create_test.xml
@@ -14,7 +14,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Название курса"
+        android:hint="Название теста"
         android:layout_marginBottom="10dp">
 
         <com.google.android.material.textfield.TextInputEditText
