--- a/app/src/main/res/layout/activity_test_detail.xml
+++ b/app/src/main/res/layout/activity_test_detail.xml
@@ -22,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            android:visibility="invisible"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="43sp"
