--- a/app/src/main/res/layout/course_list.xml
+++ b/app/src/main/res/layout/course_list.xml
@@ -30,6 +30,7 @@
             android:padding="5dp">
 
             <ImageView
+                android:id="@+id/favorite_btn"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:fontFamily="@font/globersemiboldfree"
